# fleece

./: .gitignore  CMakeLists.txt
etc/: cflags.cmake  tests.cmake
src/aws/: CMakeLists.txt  awsv4sig.cc  awsv4sig.hh  certificates.hh
src/frontend/: CMakeLists.txt  accountsettings.cc  yay-lamb.cc  yay.cc
src/http/: http_client.hh  http_structures.hh  http_writer.cc
src/util/: sha256.cc  sha256.hh
